--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span class="title-center">Byju Application</span>
   </mat-toolbar>
 
-  <div fxLayout="row" fxLayoutAlign="space-around center" class="paddingtop30 filcol">
+  <div fxLayout="row" fxLayoutAlign="space-around center" fxLayout.lt-lg="column" class="paddingtop30 filcol">
     <div>
       <mat-form-field>
         <mat-select placeholder="Choose Provider" [(ngModel)] = "provider">
@@ -43,36 +43,34 @@
     
   </div>
 
-  <mat-toolbar>
-    <div fxLayout = "row" style = "width: 100%">
-      <div fxFlex = "65">
-        <span style= "font-weight: 400; font-size: 18px; color: #6c757d; margin-left: 2%">Courses Count = {{ datas ? datas.length : '' }}</span>
-      </div>
+  <div fxLayout = "row" fxLayoutAlign="space-around center" fxLayout.lt-lg="column" class = "sortsearchdiv">
+    
+    <div fxFlex = "65" fxFlex.lt-lg>
+      <span style= "font-weight: 400; font-size: 18px; color: #6c757d">Courses Count = {{ datas ? datas.length : '' }}</span>
+    </div>
       
-      <div fxFlex = "15">
-        <mat-form-field style="font-size: 13px; position: absolute"  class="overidefchild">
-        <mat-select placeholder="Sort By" [(ngModel)] = "sortby">
-          <mat-option *ngFor="let sortby of sortarr" [value] = "sortby !== 'Reset' ? sortby : undefined" (click) = "sortfn()" class="black">
+    <div fxFlex = "15" fxFlex.lt-lg>
+      <mat-form-field style="font-size: 13px"  class="overidefchild">
+      <mat-select placeholder="Sort By" [(ngModel)] = "sortby">
+        <mat-option *ngFor="let sortby of sortarr" [value] = "sortby !== 'Reset' ? sortby : undefined" (click) = "sortfn()" class="black">
             {{sortby}}
           </mat-option>
         </mat-select>
-        </mat-form-field>
-      </div>
+      </mat-form-field>
+    </div>
 
-      <div>
-        <div class="input-group" style="margin-left: 24px">
-          <input class="form-control border-secondary py-2" placeholder="Search" [(ngModel)]="searchString" (keyup.enter)="searchInput()"  (keyup.backspace)="searchInput()">
+    <div fxFlex fxFlex.lt-lg>
+      <div class="input-group">
+        <input class="form-control border-secondary py-2" placeholder="Search" [(ngModel)]="searchString" (keyup.enter)="searchInput()"  (keyup.backspace)="searchInput()">
           <div class="input-group-append">
             <button id="mpsb" class="btn btn-outline-secondary border-left-1 border" type="submit" (click)="searchInput()">
               <i class="fa fa-search"></i>
             </button>
           </div>
         </div>
-      </div>
-      
-
     </div>
-  </mat-toolbar>
+
+  </div>
 </div>
 
 
