--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,6 +29,7 @@
 
 .margin30 {
   margin: 30px;
+  position: absolute;
 }
 
 .padding20 {
@@ -82,4 +83,29 @@
 .border-secondary {
     border-color: #d0d4d8!important;
     background-color: whitesmoke;
+}
+
+.sortsearchdiv {
+  width: 100%; 
+  height: 70px; 
+  background-color: #f5f5f5;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media only screen and (max-width: 1279px) {
+  .paddingtop {
+    padding-top: 63vh;
+  }
+  .paddingtop30 {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  .sortsearchdiv {
+    width: 100%; 
+    height: 140px; 
+    background-color: #f5f5f5;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 }
